--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -3,7 +3,7 @@
 	--orange: #ff8a00;
 	--white: #fff;
 	--green: #3fa72f;
-	--white-orange: #f9cfa0;
+	--white-orange: #ffe9cf;
 }
 
 body,
@@ -297,4 +297,47 @@ header {
 
 .menu-item__last a:hover {
 	transform: scale(1.05);
+}
+
+.menu-pag {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+.pag {
+	position: relative;
+	height: 55px;
+	width: 55px;
+	border-radius: 15px;
+}
+
+.pag span {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 18px;
+	font-weight: 200;
+}
+
+.back {
+	background-color: var(--black);
+	color: var(--white);
+}
+
+.next {
+	background-color: var(--black);
+	color: var(--white);
+}
+
+.page {
+	background-color: var(--white-orange);
+	color: var(--orange);
+}
+
+.dote span {
+	font-size: 36px;
+	color: #b7a28b;
 }
